--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap');
 
@@ -33,6 +32,7 @@ body {
     font-size: 32px;
     color: white;
     padding-top: 30px;
+    box-sizing: border-box;
 }
 
 #form {
@@ -70,10 +70,10 @@ body {
     background-color: darkgray;
 }
 
-.map-display {
+#map {
     width: 100%;
     height: 520px;
-    background-color: black;
+    z-index: -1;
 }
 
 .result {
